# OMEN

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  Dockerfile.riskcast  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  pyrightconfig.json  pytest.ini  pytest_benchmark.ini  requirements.txt
.demo/: b4_migrate.db
.demo/ledger/2026-01-29/: _CURRENT  signals-001.wal
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml  test.yml
audit/: DEMO_SCRIPT.md  ENTERPRISE_AUDIT_REPORT_FINAL.md  ENTERPRISE_AUDIT_SILICON_VALLEY_GRADE.md  PATCHLOG.md  PROOF.md  REPORT.md
cli/: __init__.py  omen_cli.py
config/: prometheus.yml
config/grafana/dashboards/: omen-overview.json
docs/: API_CHANGELOG.md  API_REFERENCE.md  AUDIT_REMEDIATION_REPORT.md  INVESTOR_BRIEF.md  OMEN_API_EXAMPLES.md  OMEN_DATA_STORAGE_REPORT.md  OMEN_DEEP_ANALYSIS_REPORT.md  OMEN_DEMO_READY_SYSTEM_REPORT.md  OMEN_DUAL_PATH_FINAL_HARDLINE_AUDIT.md  OMEN_DUAL_PATH_FULL_SYSTEM_AUDIT.md  OMEN_ENTERPRISE_AUDIT_CERTIFICATION.md  OMEN_ENTERPRISE_AUDIT_REPORT.md  OMEN_ENTERPRISE_DATA_INTEGRITY_AUDIT.md  OMEN_HOW_IT_WORKS_VI.md  OMEN_IMPROVEMENTS_REPORT.md  OMEN_RISKCAST_INTEGRATION_REPORT.md  OMEN_RUNTIME_FORENSICS_AUDIT.md  OMEN_SIGNAL_INTELLIGENCE_ENGINE_CERTIFICATION_AUDIT.md  OMEN_SYSTEM_ANALYSIS_REPORT.md  OMEN_SYSTEM_AUDIT_REPORT.md  OMEN_ULTIMATE_AUDIT_v4.0_RESULTS.md  OMEN_ULTIMATE_AUDIT_v4.1_RESULTS.md  OMEN_ULTIMATE_AUDIT_v4.2_PERFECT_SCORE.md  OMEN_ULTIMATE_AUDIT_v4.3_COMPREHENSIVE_REPORT.md  OMEN_ULTIMATE_SYSTEM_AUDIT_SHIP_SELL_READINESS.md  OMEN_ULTRA_HARDCORE_AUDIT_FIXES_v2.md  OMEN_ULTRA_HARDCORE_AUDIT_REPORT.md  OMEN_ULTRA_HARDCORE_AUDIT_v3_FINAL.md  RUNTIME_FORENSICS_AUDIT_COMPLETE.md  RUNTIME_FORENSICS_AUDIT_COMPLETE_v5.md  RUNTIME_FORENSICS_AUDIT_FINAL.md  RUNTIME_FORENSICS_AUDIT_FINAL_COMPREHENSIVE.md  RUNTIME_FORENSICS_REPORT_v2.md  SIGNAL_CONTRACT.md  SIGNAL_INTELLIGENCE_ENGINE_AUDIT.md  SYSTEM_ARCHITECTURE_REPORT.md  api.md  architecture.md  deployment.md  development.md  (+4 more)
docs/adr/: 001-deterministic-processing.md  002-hexagonal-architecture.md  003-evidence-based-impact-parameters.md  004-validation-rule-design.md  005-security-model.md  006-signal-only-architecture.md  README.md
docs/api/: README.md
docs/demo/: PRESENTATION_SCRIPTS.md  PRE_DEMO_CHECKLIST.md
docs/evidence/: logistics_parameters.md
docs/runbooks/: README.md  deployment-rollback.md  disaster-recovery.md  high-cpu.md  high-memory.md  ledger-write-failure.md  partition-seal.md  reconcile-failure.md  riskcast-down.md
docs/security/: data-retention.md  soc2-controls.md
docs/testing/: sandbox.md
examples/curl/: basic_requests.sh
examples/python/: basic_usage.py
examples/typescript/: basic_usage.ts
omen-demo/: .env.example  .npmrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.js  tsconfig.app.json  vite.config.ts
omen-demo/e2e/: ingest-demo.spec.ts  ledger-proof.spec.ts  navigation.spec.ts  overview.spec.ts  partitions.spec.ts  signals.spec.ts  visual-regression.spec.ts
omen-demo/e2e/fixtures/: demo-page.ts  test-data.ts
omen-demo/public/fallback/: README.md
omen-demo/src/: App.tsx  index.css  main.tsx
omen-demo/src/__tests__/: dataIntegrity.test.tsx  setup.ts
omen-demo/src/components/: ErrorBoundary.tsx
omen-demo/src/context/: DataModeContext.tsx  DemoModeContext.tsx  index.ts
omen-demo/src/data/: demoData.ts  demoState.ts  ingestDemoMock.ts  ledgerProofMock.ts  mockGenerators.ts  mockSignal.ts  mockSignals.ts  mockTimeSeries.ts  overviewMock.ts  partitionDetailMock.ts  partitionsMock.ts  riskAssessmentMock.ts  signalsBrowserMock.ts
omen-demo/src/hooks/: index.ts  useDataSource.ts  useDemoMode.ts  useKeyboardShortcuts.ts  useOmenApi.ts  useRealtimePrices.ts  useReducedMotion.ts  useSignalData.ts  useSignalStats.ts  useUnifiedData.ts
omen-demo/src/lib/: animationConstants.ts  apiBase.ts  autoActionRunner.ts  demoScenes.ts  field-definitions.ts  lazyComponents.tsx  mapApiToUi.ts  omen-types.ts  preloadRoutes.ts  routes.ts  search-parser.ts  soundFx.ts
omen-demo/src/screens/: CommandCenter.tsx  IngestDemoPage.tsx  IngestDemoScreen.tsx  LedgerProofPage.tsx  LedgerProofScreen.tsx  OperationsScreen.tsx  OverviewPage.tsx  OverviewScreen.tsx  PartitionDetailPage.tsx  PartitionDetailScreen.tsx  PartitionsPage.tsx  PartitionsScreen.tsx  PipelineMonitor.tsx  index.ts  (+4 more)
postman/: OMEN_API.postman_collection.json
scripts/: __init__.py  backup.py  certification_check.py  cleanup_dead_code.py  demo_reset.py  generate_openapi.py  init-db.sh  migrate.py  polymarket_doctor.py  run_pipeline.py  seed_demo_data.py  seed_test_data.py  smoke-tests.sh  test_mock_riskcast.py  verify-deployment.sh
sdk/python/: README.md  pyproject.toml
sdk/python/omen_client/: __init__.py  client.py  exceptions.py  models.py
sdk/python/tests/: __init__.py  test_client.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
src/data/: __init__.py  demo_signals.py
src/omen/: __init__.py  config.py  main.py  polymarket_settings.py
src/omen_impact/: README.md  __init__.py  assessment.py  cascading_impact.py  legacy_pipeline.py  legacy_signal.py  translator.py
src/riskcast/: README.md  __init__.py  mock_server.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
tests/: conftest.py
tests/benchmarks/: __init__.py  conftest.py  test_pipeline_performance.py
tests/integration/: conftest.py  test_api_contract.py  test_data_integrity.py  test_full_pipeline.py  test_p1_endpoints.py  test_riskcast_concurrent_ingest.py  test_signal_flow.py
tests/performance/: test_load.py
tests/security/: test_rbac_enforcement.py
tests/unit/: test_determinism.py  test_error_handling.py  test_graceful_shutdown.py  test_reconcile_state.py  test_signal_engine_compliance.py  test_signal_event.py  test_signal_store.py  test_validator_profile_regression.py
(+511 files in other folders)
