[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omen"
version = "0.1.0"
description = "OMEN Signal Processing Pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OMEN Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.0.0",
    "pyjwt>=2.8.0",
    "websockets>=12.0",
    "filelock>=3.13.0",
    "aiosqlite>=0.19.0",
    "prometheus-client>=0.19.0",
    "cryptography>=42.0.0",
    "pyyaml>=6.0.1",  # Phase 2: YAML config loading
    "yfinance>=0.2.36",  # Global stock/forex/bond data
    "vnstock>=3.0.0",  # Vietnamese stock data
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.0.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
]

[project.scripts]
omen-pipeline = "omen.scripts.run_pipeline:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["omen", "omen_impact", "riskcast"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E402",    # Module level import not at top (conftest needs env vars first)
    "E501",    # Line too long
    "UP045",   # Optional[X] -> X | None (baseline for audit Phase A)
    "W293", "W291",  # whitespace
    "I001",    # unsorted-imports
    "F401",    # unused-import
    "UP035", "UP006", "UP037", "UP028", "UP011",
    "N803", "N818", "N806",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/omen"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/api/*",
    "*/main.py",
    "*polymarket*",
    "*kafka_publisher*",
    "*webhook_publisher*",
    "*port_closure*",
    "*strike_impact*",
    "*anomaly_detection*",
    "*geographic_relevance*",
    "*semantic_relevance*",
    "*confidence_calculator*",
    "*/application/container.py",
    "*/infrastructure/monitoring/*",
    "*/infrastructure/security/audit.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
