[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omen-client"
version = "2.0.0"
description = "Official Python SDK for OMEN Signal Intelligence API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "OMEN Team", email = "sdk@omen.io" },
]
keywords = [
    "omen",
    "signals",
    "logistics",
    "risk",
    "api",
    "sdk",
    "vietnam",
    "supply-chain",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "respx>=0.20.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://omen.io"
Documentation = "https://docs.omen.io/sdk/python"
Repository = "https://github.com/omen/omen-python-sdk"
Changelog = "https://github.com/omen/omen-python-sdk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["omen_client"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
